Fixed Contact and About pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -141,7 +141,7 @@
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
-        <p>Here is my contact information.</p>
+        <p>Please feel free to reach out to me! Here is how you can get in touch with me:.</p>
 <table>
 <thead>
 <tr>
